...
      return null;
    });
  }


  return (
    <View testID="screen-homepage" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />
      {isLoading || isLoadingHomeContext || !dataLoadedForCurrentFocus ? (
        <ContentLoader viewBox={`0 0 ${width} ${height}`} backgroundColor="#E8E8E8" foregroundColor="#F5F5F5">
          {/* Ícone de Notificação */}
          <Rect x={width - 82} y={106} rx="16" ry="16" width={64} height={64} />

...
