...
import { Button } from '@components/atoms';

export function Hello() {
  const navigation = useNavigation<AuthNavigatorRoutesProps>();

  return (
    <Flex justify="space-evenly" h="100%" mt={8} testID="screen-welcome">
      <Image source={Vector} alt="Vetor" resizeMode="stretch" position="absolute" bottom={230} w="100%" h="35%" />

      <Center>
        <LogoSvg />

        <Text
...
