...
        description: 'Não foi possível salvar a preferência.',
      });
    }
  }, [showSuccess, showError, refreshFitnessData]);

  return (
    <View testID="screen-preferences" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <VStack pt={16} mx={6}>
        <Header title="Preferências" handleBackTo={() => navigation.goBack()} />
      </VStack>
...
